# RetinaRisk

./: .gitignore  docker-compose.yaml  pyproject.toml
backend/: Dockerfile
backend/src/api/: main.py
backend/src/schemas/: patient.py
backend/src/services/: patient_service.py
frontend/: Dockerfile  app.py
