[project]
name = "retinarisk"
version = "0.1.0"
description = ""
authors = [
    {name = "hemanjalireddy",email = "43489240+hemanjalireddy@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "requests (>=2.32.5,<3.0.0)",
    "streamlit (>=1.52.2,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"


[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"

